@@ -4,7 +4,8 @@
 
 ## Purpose
 
-This project benchmarks the throughput performance of a variety of Java Json libraries using [JMH](http://openjdk.java.net/projects/code-tools/jmh/).
+This project benchmarks the throughput performance of a variety of Java Json libraries
+using [JMH](http://openjdk.java.net/projects/code-tools/jmh/).
 It covers the following libraries:
 
 * [avaje-jsonb](https://github.com/avaje/avaje-jsonb)
@@ -32,11 +33,15 @@ It covers the following libraries:
 * [underscore-java](https://github.com/javadev/underscore-java)
 
 When available, both databinding and 'stream' (custom packing and unpacking) implementations are tested.
-Two different kinds of [models](/src/main/java/com/github/fabienrenaud/jjb/model/) are evaluated with payloads of 1, 10, 100 and 1000 KB size:
-* [`Users`](/src/main/java/com/github/fabienrenaud/jjb/model/Users.java): uses primitive types, String, List and simple POJOs; and
+Two different kinds of [models](/src/main/java/com/github/fabienrenaud/jjb/model/) are evaluated with payloads of 1, 10,
+100 and 1000 KB size:
+
+* [`Users`](/src/main/java/com/github/fabienrenaud/jjb/model/Users.java): uses primitive types, String, List and simple
+  POJOs; and
 * [`Clients`](/src/main/java/com/github/fabienrenaud/jjb/model/Clients.java): adds arrays, enum, UUID, LocalDate
 
 This benchmark is written to:
+
 * randomly generate payloads upon static loading of the JVM/benchmark; the *seed* is also shared across runs
 * read data from RAM
 * write data to reusable output streams (when possible); this reduces allocation pressure
@@ -46,36 +51,37 @@ Not evaluated are: RAM utilization, compression, payloads > 1 MB.
 
 ## Results
 
-The benchmarks are written with [JMH](http://openjdk.java.net/projects/code-tools/jmh/) and for Java 8.
+The benchmarks are written with [JMH](http://openjdk.java.net/projects/code-tools/jmh/) and for Java 17.
 
-The results here-below were computed on November the 27th, 2021 with the following libraries and versions:
+The results here-below were computed on April the 30th, 2023 with the following libraries and versions:
 
 | Library      | Version  |
 |--------------|----------|
-| jackson      | 2.13.0   |
-| genson       | 1.6      |
-| fastjson     | 1.2.78   |
-| gson         | 2.8.9    |
-| org.json     | 20210307 |
-| javax-json   | 1.1.4    |
-| json-io      | 4.13.0   |
-| flexjson     | 3.3      |
+| avaje-jsonb  | 1.4      |
 | boon         | 0.34     |
-| json-smart   | 2.4.7    |
-| johnzon      | 1.2.15   |
-| logansquare  | 1.3.7    |
-| dsl-json     | 1.9.9    |
-| simplejson   | 1.1.1    |
-| nanojson     | 1.7      |
+| dsl-json     | 1.10.0   |
+| fastjson     | 2.0.27   |
+| flexjson     | 3.3      |
+| genson       | 1.6      |
+| gson         | 2.10.1   |
+| jackson      | 2.14.2   |
 | jodd json    | 6.0.3    |
-| moshi        | 1.12.0   |
-| tapestry     | 5.7.3    |
-| jsoniter     | 0.9.23   |
+| johnzon      | 1.2.19   |
+| jakarta      | 2.1.1    |
+| json-io      | 4.14.0   |
+| simplejson   | 1.1.1    |
+| json-smart   | 2.4.10   |
+| logansquare  | 1.3.7    |
 | minimal-json | 0.9.5    |
 | mjson        | 1.4.1    |
-| underscore   | 1.71     | 
+| moshi        | 1.14.0   |
+| nanojson     | 1.8      |
+| org.json     | 20230227 |
 | purejson     | 1.0.1    |
-| yasson       | 1.0.9    |
+| qson         | 1.1.1    |
+| tapestry     | 5.8.2    |
+| underscore   | 1.88     | 
+| yasson       | 3.0.2    |
 
 [All graphs and sheets are available in this google doc.][spreadsheet]
 
@@ -103,7 +109,6 @@ Note: fewer libraries are tested with this model due to lack of support for some
 **Serialization performance**
 ![json serialization performance for primitive types, String, List and simple POJOs, arrays, enum, UUID, LocalDate][graph-clients-ser]
 
-
 ### Benchmark configuration
 
 Tests were run on an [Amazon EC2 c5.xlarge](https://aws.amazon.com/ec2/instance-types/c5/) (4 vCPU, 8 GiB RAM)
@@ -111,11 +116,11 @@ Tests were run on an [Amazon EC2 c5.xlarge](https://aws.amazon.com/ec2/instance-
 JMH info:
 
 ```
-# JMH version: 1.33
-# VM version: JDK 1.8.0_302, OpenJDK 64-Bit Server VM, 25.302-b08
-# VM invoker: /usr/lib/jvm/java-1.8.0-openjdk-1.8.0.302.b08-0.amzn2.0.1.x86_64/jre/bin/java
-# VM options: -XX:+AggressiveOpts -Xms2g -Xmx2g
-# Blackhole mode: full + dont-inline hint (default, use -Djmh.blackhole.autoDetect=true to auto-detect)
+# JMH version: 1.35
+# VM version: JDK 17.0.6, OpenJDK 64-Bit Server VM, 17.0.6+10-LTS
+# VM invoker: /usr/lib/jvm/java-17-amazon-corretto.x86_64/bin/java
+# VM options: -Xms2g -Xmx2g --add-opens=java.base/java.time=ALL-UNNAMED
+# Blackhole mode: compiler (auto-detected, use -Djmh.blackhole.autoDetect=false to disable)
 # Warmup: 5 iterations, 10 s each
 # Measurement: 10 iterations, 3 s each
 # Timeout: 10 min per iteration
@@ -129,8 +134,8 @@ JMH info:
 
 Prerequisites:
 
-  * JDK 17; and JAVA_HOME set.
-  * make
+* JDK 17; and JAVA_HOME set.
+* make
 
 By default, running `./run ser` (`./run deser` respectively) will run
 all -- stream and databind -- serialization (deserialization respectively)
@@ -154,12 +159,14 @@ be patient.
 
 Prerequisites:
 
- * JDK 17; and JAVA_HOME set.
- * make
- * [packer](https://www.packer.io/)
- * [awscli](https://docs.aws.amazon.com/cli/latest/userguide/getting-started-install.html) and configured via `aws configure`
+* JDK 17; and JAVA_HOME set.
+* make
+* [packer](https://www.packer.io/)
+* [awscli](https://docs.aws.amazon.com/cli/latest/userguide/getting-started-install.html) and configured
+  via `aws configure`
 
 Then, simply run:
+
 ```
 make packer
 ```
@@ -172,17 +179,17 @@ libraries is welcome.
 Adding a JSON library to the benchmark requires little work and you can
 find numerous examples in the commit history. For instance:
 
- * Addition of moshi: https://github.com/fabienrenaud/java-json-benchmark/commit/6af2c0a7091b12a9dc768e49499682b97ea57ff6
- * Addition of jodd: https://github.com/fabienrenaud/java-json-benchmark/commit/288a4e61496588ed4c0a80e1f107f34f9a2c985c
- * Addition of json-simple: https://github.com/fabienrenaud/java-json-benchmark/commit/1e1e559c39a6eddc3dd7d7cea777fc7861415469
-
+* Addition of moshi: https://github.com/fabienrenaud/java-json-benchmark/commit/6af2c0a7091b12a9dc768e49499682b97ea57ff6
+* Addition of jodd: https://github.com/fabienrenaud/java-json-benchmark/commit/288a4e61496588ed4c0a80e1f107f34f9a2c985c
+* Addition of
+  json-simple: https://github.com/fabienrenaud/java-json-benchmark/commit/1e1e559c39a6eddc3dd7d7cea777fc7861415469
 
 Pull requests are welcome.
 
 
-[jmh-results]: /archive/raw-results-2021-11-27.md
-[spreadsheet]: https://docs.google.com/spreadsheets/d/18XdXQi7GJmVgWBuo0BAsjbPUHW-qDHge1k4WT8uOEIU/edit?usp=sharing
-[graph-users-deser]: https://docs.google.com/spreadsheets/d/e/2PACX-1vSJsmkX9LTVyohgO8R8tZjIxdRCZugLLNeW42TLwsqdZEeNnSo0sGpVVQ2X8G2Ws7Cw9JXN9J46WZGE/pubchart?oid=1217359585&format=image
-[graph-users-ser]: https://docs.google.com/spreadsheets/d/e/2PACX-1vSJsmkX9LTVyohgO8R8tZjIxdRCZugLLNeW42TLwsqdZEeNnSo0sGpVVQ2X8G2Ws7Cw9JXN9J46WZGE/pubchart?oid=296776676&format=image
-[graph-clients-deser]: https://docs.google.com/spreadsheets/d/e/2PACX-1vSJsmkX9LTVyohgO8R8tZjIxdRCZugLLNeW42TLwsqdZEeNnSo0sGpVVQ2X8G2Ws7Cw9JXN9J46WZGE/pubchart?oid=684555912&format=image
-[graph-clients-ser]: https://docs.google.com/spreadsheets/d/e/2PACX-1vSJsmkX9LTVyohgO8R8tZjIxdRCZugLLNeW42TLwsqdZEeNnSo0sGpVVQ2X8G2Ws7Cw9JXN9J46WZGE/pubchart?oid=2004244401&format=image
+[jmh-results]: /archive/raw-results-2023-04-30.md
+[spreadsheet]: https://docs.google.com/spreadsheets/d/1KB2V8kxtXIgudNO4SpfYqZKn3z5OnFBP6bZVB9K2RUE/edit?usp=sharing
+[graph-users-deser]: https://docs.google.com/spreadsheets/d/e/2PACX-1vQjiR_OOk6FXipfmKiZCil9yAdM4BSPViKIOh0lvAEHcD-gVy_lGiUX86VBhr_xrzcz4VsLSHIzq2qY/pubchart?oid=1217359585&format=image
+[graph-users-ser]: https://docs.google.com/spreadsheets/d/e/2PACX-1vQjiR_OOk6FXipfmKiZCil9yAdM4BSPViKIOh0lvAEHcD-gVy_lGiUX86VBhr_xrzcz4VsLSHIzq2qY/pubchart?oid=296776676&format=image
+[graph-clients-deser]: https://docs.google.com/spreadsheets/d/e/2PACX-1vQjiR_OOk6FXipfmKiZCil9yAdM4BSPViKIOh0lvAEHcD-gVy_lGiUX86VBhr_xrzcz4VsLSHIzq2qY/pubchart?oid=684555912&format=image
+[graph-clients-ser]: https://docs.google.com/spreadsheets/d/e/2PACX-1vQjiR_OOk6FXipfmKiZCil9yAdM4BSPViKIOh0lvAEHcD-gVy_lGiUX86VBhr_xrzcz4VsLSHIzq2qY/pubchart?oid=2004244401&format=image
